# fidelity-ocr-extractor

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.toml  extract.py  fidelity_extractor.toml  main.py  pyproject.toml  viewer.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml
docs/: DEVELOPMENT.md  FIELD_REFERENCE.md  PROJECT_SPEC.md  USER_GUIDE.md
tests/: test_extractor.py  test_viewer.py
tests/fixtures/: degraded_header.json  noisy_option_row.json
viewer_static/: app.js  index.html  styles.css
