[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "fidelity-ocr-extractor"
version = "0.1.0"
description = "Extract Fidelity Trader+ monitoring screenshots into CSV files."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "whosthatknocking"},
]
dependencies = [
    "Pillow>=10.0.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "flake8>=7.0",
]

[project.scripts]
fidelity-ocr-extractor = "main:main"

[tool.setuptools]
py-modules = ["extract", "main"]

[tool.setuptools.package-data]
"*" = ["docs/*"]

[tool.flake8]
max-line-length = 127
max-complexity = 10
