[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "fidelity-ocr-extractor"
version = "0.1.0"
description = "Extract Fidelity Trader+ monitoring screenshots into CSV files."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "whosthatknocking"},
]
maintainers = [
    {name = "whosthatknocking"},
]
keywords = ["ocr", "fidelity", "trading", "finance", "csv", "extraction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "Pillow>=10.0.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/whosthatknocking/fidelity-ocr-extractor"
Repository = "https://github.com/whosthatknocking/fidelity-ocr-extractor"
Issues = "https://github.com/whosthatknocking/fidelity-ocr-extractor/issues"
Changelog = "https://github.com/whosthatknocking/fidelity-ocr-extractor/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "flake8>=7.0",
]

[project.scripts]
fidelity-ocr-extractor = "main:main"

[tool.setuptools]
py-modules = ["extract", "main"]

[tool.setuptools.package-data]
"*" = ["docs/*"]

[tool.flake8]
max-line-length = 127
max-complexity = 10
